<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_main"
    android:orientation="vertical"
    tools:context=".Orders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/my_order"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:background="@drawable/text_permission_border"
        android:elevation="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="30dp"
                android:divider="@null"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/total_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/total" />
            <TextView
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:text="$" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:text="22.67" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/roboto_regular"
            android:paddingHorizontal="50dp"
            android:text="@string/next_order"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/clear"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>